# libres

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  Vagrantfile  mypy.sh  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini  try.py  vagrant-provision.sh
.github/workflows/: python-pr.yaml  python-publish.yaml  python-tox.yaml
docs/: Makefile  api.rst  concepts.rst  conecpts.rst  conf.py  customizations.rst  faq.rst  index.rst  under_the_hood.rst
docs/_static/: custom.css
example/flask/: example.dsn  run.py
example/flask/static/: fullcalendar.css  script.js
example/flask/templates/: index.html  layout.html
examples/flask/: requirements.txt  run.py
examples/flask/static/: contextmenu.css  contextmenu.js  fullcalendar.js  script.js  style.css
examples/flask/templates/: index.html  layout.html
libres/: .gitignore  __init__.py  errors.py
libres/conf/: __init__.py  default_settings.py
libres/context/: __init__.py  accessor.py  context.py  core.py  exposure.py  registry.py  session.py  settings.py
libres/context_specific/: __init__.py  hostess.py  independent_queries.py  scheduler.py  utils.py
libres/db/: __init__.py  queries.py  scheduler.py
libres/db/models/: __init__.py  allocation.py  other.py  reservation.py  reserved_slot.py  timestamp.py
libres/db/models/types/: __init__.py  context_aware_json.py  guid.py  json_type.py  utcdatetime.py  uuid_type.py
libres/models/: __init__.py  allocation.py  reservation.py  reserved_slot.py  timestamp.py
libres/models/types/: utcdatetime.py
libres/modules/: __init__.py  calendar.py  compat.py  database.py  errors.py  events.py  hostess.py  postgresql.py  rasterizer.py  registry.py  scheduler.py  utils.py
libres/services/: __init__.py  accessor.py  email.py  registry.py  session.py  settings.py
libres/services/db/: session.py
libres/tests/: __init__.py  conftest.py  test_allocation.py  test_calendar.py  test_registry.py  test_reservation.py  test_reserved_slot.py  test_scheduler.py  test_session.py  test_test.py  test_types.py  test_utils.py
libres/testsuite/: __init__.py  test_hostess.py  test_registry.py  test_settings.py
src/libres/: __init__.py
src/libres/context/: core.py  exposure.py  registry.py  session.py  settings.py
src/libres/db/: __init__.py  queries.py  scheduler.py
src/libres/db/models/: __init__.py  allocation.py  base.py  blocker.py  other.py  reservation.py  reserved_slot.py  timespan.py  timestamp.py
src/libres/db/models/types/: __init__.py  json_type.py  utcdatetime.py  uuid_type.py
src/libres/modules/: __init__.py  errors.py  events.py  rasterizer.py  utils.py
tests/: conftest.py  test_allocation.py  test_registry.py  test_reservation.py  test_reserved_slot.py  test_scheduler.py  test_scheduler_blockers.py  test_session.py  test_test.py  test_types.py  test_utils.py
