[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libres"
dynamic = ["version", "readme"]
description = "A library to reserve things"
requires-python = ">=3.10"
authors = [
    { name = "Denis Krienbühl", email = "denis@href.ch" },
]
maintainers = [
    { name = "Seantis GmbH", email = "info@seantis.ch" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "python-dateutil",
    "pytz",
    "sedate >= 1.0.0",
    "SQLAlchemy >= 2.0.0, < 2.1.0",
]

[project.urls]
Repository = "http://github.com/seantis/libres"

[tool.setuptools.package-data]
libres = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "libres.__version__"}
readme = {file = ["README.rst", "HISTORY.rst"]}

[dependency-groups]
ruff = [
    "ruff",
]
flake8 = [
    "flake8",
    "flake8-pyproject",
    "flake8-type-checking",
]
bandit = [
    "bandit[toml]",
]
mypy = [
    "mypy",
    "types-python-dateutil",
    "types-pytz",
    "typing-extensions",
]
lint = [
    {include-group = "flake8"},
    {include-group = "ruff"},
    {include-group = "bandit"},
    {include-group = "mypy"},
]
test = [
    "jsonpickle",
    "psycopg2-binary",
    "pytest",
    "pytest-codecov[git]",
    "testing.postgresql",
]
tox = [
    "tox>=4.22",
    "tox-uv",
]
dev = [
    "bump-my-version",
    "pre-commit",
    "pre-commit-uv",
    "uv",
    {include-group = "tox"},
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.bumpversion]
current_version = "0.10.2"
commit = true
message = "Release {new_version}"
tag = true
tag_message = "Release {new_version}"

[[tool.bumpversion.files]]
filename = "src/libres/__init__.py"
search= "__version__ = '{current_version}'"
replace= "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "HISTORY.rst"
search = """
---------
"""
replace = """
---------

{new_version} ({now:%d.%m.%Y})
~~~~~~~~~~~~~~~~~~~
"""

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unreachable = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.flake8]
select = ["TC0" , "TC1"]
per_file_ignores = [
    "*.pyi: TC",
    "tests/**.py: TC",
]
exclude=[
    ".venv",
    "venv",
    ".git",
    ".tox",
    "dist",
    "docs",
    "*lib/python*",
    "*egg",
    "build"
]
type-checking-sqlalchemy-enabled = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
src = ["src", "tests"]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "stubs/**/*.pyi"
]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "B0",
    "B904",
    "B909",
    "C4",
    "COM818",
    "D2",
    "D301",
    "D4",
    "E",
    "F",
    "FLY002",
    "I002",
    "ISC",
    "N",
    "PERF",
    "PGH004",
    "PIE",
    "PT",
    "PYI",
    "Q",
    "RUF",
    "SIM",
    "SLOT",
    "UP",
    "W"
]
ignore = [
    "B007",
    "C420",
    "D200",
    "D201",
    "D202",
    "D204",
    "D205",
    "D209",
    "D210",
    "D211",
    "D400",
    "D401",
    "D412",
    "E226",
    "E402",
    "E711",
    "E712",
    "E741",
    "N818",
    "PYI019",
    "PYI041",
    "RUF012",
    "RUF013",
    "RUF021",
    "RUF022",
    "RUF023",
    "RUF031",
    "RUF052",
    "RUF056",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM110",
    "SIM118",
    "SIM210",
    "SIM910",
    "UP009",
    "UP012",
    "UP032",
]
unfixable = []
external = ["TC"]
allowed-confusables = ["×"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"src/**/*.py" = ["PT"]
"tests/**/*.py" = [
    "C4",
    "D",
    "FLY002",
    "ISC",
    "N",
    "Q",
    "PERF",
    "PGH",
    "PIE",
    "PYI",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "afterFlowable",
    "HSTORE",
    "sortKey",
    "URL",
    "UUID"
]
classmethod-decorators = [
    # NOTE: We can potentially get rid some of these with SQLAlchemy 2.0
    #       since they should cleanly combine with classmethod
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tox]
requires = ["tox>=4.21"]
envlist = [
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "3.14",
    "flake8",
    "ruff",
    "bandit",
    "mypy",
    "report"
]

[tool.tox.gh.python]
"3.10" = ["3.10"]
"3.11" = ["3.11", "flake8", "bandit", "ruff", "mypy"]
"3.12" = ["3.12"]
"3.13" = ["3.13"]
"3.14" = ["3.14"]

[tool.tox.env_run_base]
use_develop = true
set_env = { COVERAGE_FILE = ".coverage.{envname}" }
deps = ["-e{toxinidir}"]
dependency_groups = ["test"]
commands = [
    [
        "pytest",
        "--cov",
        "--cov-report=",
        { replace = "posargs", default = [], extend = true }
    ],
]
[tool.tox.env.ruff]
base_python = ["python3.11"]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "check"]]

[tool.tox.env.flake8]
base_python = ["python3.11"]
skip_install = true
dependency_groups = ["flake8"]
commands = [["flake8", "src{/}", "tests{/}"]]

[tool.tox.env.bandit]
base_python = ["python3.11"]
skip_install = true
dependency_groups = ["bandit"]
commands = [["bandit", "-q", "-c", "pyproject.toml", "-r", "src"]]

[tool.tox.env.mypy]
base_python = ["python3.11"]
skip_install = true
dependency_groups = ["mypy"]
commands = [
    ["mypy", "-p", "libres", "--python-version", "3.10"],
    ["mypy", "-p", "libres", "--python-version", "3.11"],
    ["mypy", "-p", "libres", "--python-version", "3.12"],
    ["mypy", "-p", "libres", "--python-version", "3.13"],
    ["mypy", "-p", "libres", "--python-version", "3.14"],
]

[tool.tox.env.report]
base_python = ["python3.11"]
skip_install = true
ignore_errors = true
ignore_outcome = true
set_env = { COVERAGE_FILE = ".coverage" }
deps = ["coverage"]
commands = [
    ["coverage", "combine", "{toxinidir}"],
    ["coverage", "report", "-m"],
]
