[metadata]
name = libres
version = attr: libres.__version__
url = http://github.com/seantis/libres/
author = Denis Krienbühl
author_email = denis@href.ch
maintainer = Seantis GmbH
maintainer_email = info@seantis.ch
description = A library to reserve things
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.9
include_package_data = True
package_dir =
    = src
zip_safe = False
packages =
    libres
install_requires =
    python-dateutil
    psycopg2-binary
    pytz
    sedate >= 1.0.0
    SQLAlchemy >=0.9,<2

[options.package_data]
libres =
    py.typed

[options.extras_require]
dev =
    bandit[toml]
    bump-my-version
    flake8
    flake8-type-checking
    pre-commit
    pre-commit-uv
    ruff
    uv
    tox
    tox-uv
test =
    jsonpickle
    pytest
    pytest-codecov[git]
    testing.postgresql
mypy =
    mypy
    sqlalchemy-stubs
    types-psycopg2
    types-python-dateutil
    types-pytz
    typing-extensions

[flake8]
select = TC0,TC1
per_file_ignores =
    *.pyi: TC
    tests/**.py: TC
exclude=.venv,venv,.git,.tox,dist,docs,*lib/python*,*egg,build
